--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -1,40 +1,34 @@
+/* Social Icon Base */
+.social-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  font-size: 30px; /* Increased icon size */
+  background-color: #112d57;
+  color: white;
+  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+}
 
-.form-input{
-    width: 250px;
-  }
-  
-  .form-input {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    background-color: #ffff;
-  }
-  
-  .contact-form{
-  
-    background-color: #112d57;
-    color: white;
-  }
-  
-  .t-blue {
-    color: #ffff; /* or any color you want */
-    background-color: #112d57;
-    border: black solid 2px ;
-    border-radius: 50%;
-  }
-  
-  .t-blue:hover {
-    color: #0f8420; /* or any color you want */
-    background-color:  #ffff;
-    
-  }
-  
-  .contact-detail a{
-    color: #112d57;
-   
-  }
-  
-  .contact-detail a:hover{
-    font-weight: bolder;
-  }
-  
+/* Hover Effects for individual platforms */
+.social-icon:hover {
+  color: white;
+}
+
+.social-icon.facebook:hover {
+  background-color: #3b5998; /* Facebook Blue */
+}
+
+.social-icon.instagram:hover {
+  background-color: #e1306c; /* Instagram Pink */
+}
+
+.social-icon.youtube:hover {
+  background-color: #ff0000; /* YouTube Red */
+}
+
+.social-icon.whatsapp:hover {
+  background-color: #25D366; /* WhatsApp Green */
+}
